# LTest

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  asan.txt  docker-compose.yml
.github/workflows/: ci.yaml  clang-format.yaml  run-tests.yaml
build-debug/: CMakeCache.txt
clangpass/: CMakeLists.txt  ast_consumer.cpp  clangpass.cpp  clangpass_tool.cpp  refactor_matcher.cpp
clangpass/include/: clangpass.h
codegen/: CMakeLists.txt  coyieldpass.cpp  resmockpass.cpp  yieldpass.cpp
docs/: dual-verification.md
runtime/: CMakeLists.txt  coro_ctx_guard.cpp  generators.cpp  lib.cpp  lin_check.cpp  logger.cpp  minimization.cpp  minimization_smart.cpp  mock_res.cpp  os_simulator.cpp  strategy_context.cpp  syscall_trap.cpp  verifying.cpp  wmm_runtime.cpp  yield_guard.cpp
runtime/include/: block_manager.h  block_state.h  blocking_primitives.h  coro_ctx_guard.h  custom_round.h  futex.h  futex_state.h  generators.h  latomic.h  lib.h  lincheck.h  lincheck_dual.h  lincheck_recursive.h  linearization_search.h  logger.h  minimization.h  minimization_smart.h  mock_res.h  os_simulator.h  pct_strategy.h  pick_strategy.h  pretty_print.h  random_strategy.h  round_robin_strategy.h  scheduler.h  scheduler_dual_state.h  scheduler_fwd.h  stable_vector.h  strategy_verifier.h  syscall_trap.h  tla_strategy.h  value_wrapper.h  verifying.h  verifying_macro.h  wmm_runtime.h  workload_policy.h  yield_guard.h
runtime/include/wmm/: common.h  edge.h  event.h  graph.h  hbclock.h  relseq.h  vector_clock.h  wmm.h
scripts/: check.sh  check_ctx_speed.sh  format_code.sh  run_dual_folly_matrix.sh  run_dual_libcoro_matrix.sh  run_tidy.sh
syscall_intercept/: CMakeLists.txt  hook.cpp
test/: CMakeLists.txt
test/codegen/: CMakeLists.txt  lit.cfg  lit.cfg.in
test/codegen/coyield/: lit.local.cfg
test/codegen/coyield/tests/: bool_suspend.cpp  bool_suspend.cpp.yml  simple_insert.cpp  simple_insert.cpp.yml  thread_creation.cpp  thread_creation.cpp.yml  void_suspend.cpp
test/codegen/resmock/: lit.local.cfg.in
test/codegen/resmock/tests/: c_memory.cpp
test/runtime/: lin_check_test.cpp  stackfulltask_mock.h
tmp_dual_stack/: README.md  coro_dual_stack.h  folly.md  libcoro.md
verifying/: CMakeLists.txt  README.md
verifying/blocking/: CMakeLists.txt  bank.cpp  bank_deadlock.cpp  blocking_primitives.h  buffered_channel.cpp  folly_flatcombining_queue.cpp  folly_rwspinlock.cpp  folly_sharedmutex.cpp  mutexed_register.cpp  nonlinear_buffered_channel.cpp  nonlinear_mutex.cpp  shared_mutexed_register.cpp  simple_deadlock.cpp  simple_mutex.cpp
verifying/blocking/verifiers/: buffered_channel_verifier.h  libcoro_mutex_verifier.h  libcoro_shared_mutex_verifier.h  mutex_verifier.h  shared_mutex_verifier.h
verifying/dual/: CMakeLists.txt  coro_async_stack.cpp  coroutine_queue.cpp  dual_treiber_stack.cpp
verifying/dual/folly/: CMakeLists.txt  folly_coro_await_adapter.h  folly_coro_baton.cpp  folly_coro_bounded_queue.cpp  folly_coro_mutex.cpp  folly_coro_shared_mutex.cpp  folly_coro_shared_promise.cpp  folly_coro_unbounded_queue.cpp
verifying/dual/folly/verifiers/: folly_coro_mutex_verifier.h  folly_coro_shared_mutex_verifier.h
verifying/dual/libcoro/: CMakeLists.txt  libcoro_event.cpp  libcoro_latch.cpp  libcoro_mutex.cpp  libcoro_queue.cpp  libcoro_ring_buffer.cpp  libcoro_semaphore.cpp  libcoro_shared_mutex.cpp
verifying/specs/: bank.h  bounded_queue.h  buffered_channel.h  communication.h  coro_async_stack.h  coroutine_queue.h  dual_deadlock.h  dual_stack_split.h  mutex.h  queue.h  register.h  set.h  stack.h  support_coro.h  unique_args.h
verifying/specs/folly/: coro_baton.h  coro_bounded_queue.h  coro_mutex.h  coro_shared_mutex.h  coro_shared_promise.h  coro_unbounded_queue.h
verifying/specs/libcoro/: event.h  latch.h  mutex.h  queue.h  ring_buffer.h  semaphore.h  shared_mutex.h
verifying/targets/: CMakeLists.txt  atomic_register.cpp  coro_async_stack.cpp  coroutine_queue.cpp  counique_args.cpp  counique_args.txt  counique_args.yml  deadlock.cpp  dual_deadlock.cpp  dual_treiber_stack.cpp  dual_treiber_stack_cor.cpp  dynthreads_unique_args.cpp  dynthreads_unique_args.yml  fast_queue.cpp  mutex_queue.cpp  nonlinear_communication.cpp  nonlinear_communication.yml  nonlinear_ms_queue.cpp  nonlinear_queue.cpp  nonlinear_queue_with_custom_rounds.cpp  nonlinear_queue_with_large_custom_round.cpp  nonlinear_queue_with_multiple_custom_rounds.cpp  nonlinear_set.cpp  nonlinear_treiber_stack.cpp  race_register.cpp  unique_args.cpp  unique_args.yml  wmm.cpp
verifying/targets/wmm_litmus/: CMakeLists.txt  exp1_sc.cpp  exp2_relaxed_sc.cpp  exp3_sc.cpp  exp4_relaxed.cpp  exp5_ra.cpp  exp6_mixed.cpp  exp7_rmw_sc.cpp  exp8_rmw_sc.cpp  exp9_weak_rmw.cpp  litmus10_exchange_sc.cpp  litmus11_fetchadd_weak.cpp  litmus12_fetchsub_relacq.cpp  litmus13_prefix_inc_sc.cpp  litmus14_prefix_dec_sc.cpp  litmus15_postinc_sc.cpp  litmus16_fetchand_relacq.cpp  litmus17_fetchor_weak.cpp  litmus18_fetchxor_relacq.cpp  litmus19_andassign_sc.cpp  litmus1_sc.cpp  litmus20_oreq_sc.cpp  litmus21_xoreq_sc.cpp  litmus22_opand_weak.cpp  litmus23_postdec_sc.cpp  litmus24_oreq_weak.cpp  litmus25_xoreq_relacq.cpp  litmus26_xoreq_weak.cpp  litmus27_relseq_rmw_acq.cpp  litmus28_relseq_same_thread_rlx.cpp  litmus2_relaxed_sc.cpp  litmus3_sc.cpp  litmus4_relaxed.cpp  litmus5_ra.cpp  litmus6_mixed.cpp  litmus7_rmw_sc.cpp  litmus8_rmw_sc.cpp  litmus9_weak_rmw.cpp  litmus_common.h
